# project-management-dashboard

./: .env.production  .gitignore  .npmrc  PROJECT_REVIEW.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml
.github/: CODEOWNERS  dependabot.yml
backend/: .env.example  .flake8  LINTING.md  Makefile  debug_test.py  pyrightconfig.json  pytest.ini  requirements.txt  setup.cfg  setup.py  test_project_management
backend/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/core/: consumers.py  exceptions.py  middleware.py  routing.py  test_consumers.py  urls.py  utils.py  views.py
backend/projects/: admin.py  apps.py  fixtures.py  models.py  permissions.py  search.py  search_indexes.py  serializers.py  signals.py  urls.py  views.py
backend/projects/management/commands/: generate_report.py  seed_database.py
backend/projects/migrations/: 0001_initial.py  0002_add_role_model.py  0003_alter_milestone_progress_alter_role_bg_color_and_more.py  0004_activity_change_reason_activity_changed_fields_and_more.py  0005_add_comment_model.py  0005_add_task_model.py  0006_comment.py
backend/projects/templates/search/indexes/projects/: activity_text.txt  milestone_text.txt  project_text.txt
backend/projects/tests/: test_api_milestones.py  test_api_projects.py  test_changelog.py  test_comments.py  test_integration_workflows.py  test_permissions.py  test_sanity.py  test_search.py
backend/websocket_service/: apps.py  channels_broadcast.py  consumers.py  routing.py  urls.py  views.py
docs/: API_GUIDE.md  BRANCHING_STRATEGY.md  CODE_OF_CONDUCT.md  (+27 more)
(+130 files in other folders)
