[metadata]
name = project-management-dashboard
version = 1.0.0
description = Project Management Dashboard Backend

[tool:pytest]
DJANGO_SETTINGS_MODULE = config.settings
python_files = tests.py test_*.py *_tests.py
testpaths = projects/tests core/tests
addopts = --strict-markers --tb=short

[tool:black]
line-length = 100
target-version = py312
